--- a/src/components/LandingPage/VideoEmbed/VideoEmbed.astro
+++ b/src/components/LandingPage/VideoEmbed/VideoEmbed.astro
@@ -19,6 +19,7 @@ const CHANNEL_SUBSCRIBE_LINK =
 		flex-direction: column;
 		align-items: center;
 		justify-content: center;
+		min-height: 100vh;
 	}
 
 	h2 {
