--- a/src/styles/themes/_dark.scss
+++ b/src/styles/themes/_dark.scss
@@ -51,6 +51,14 @@
 		var(--bewebdev-purple-saturated)
 	);
 
+	// popular categories landing
+	--theme-popular-categories-card-bg: rgba(0, 0, 0, 0.1);
+	--theme--popular-categories-card-text: var(--theme-text);
+	--theme-popular-categories-button-bg: transparent;
+	--theme-popular-categories-button-bg-hover: var(--bewebdev-pink-saturated);
+	--theme-popular-categories-button-border: rgba(255, 255, 255, 0.2);
+	--theme-popular-categories-card-border-hover: var(--theme-bg);
+
 	/* Docs sidebar */
 	--sidebar-bg: hsl(214, 35%, 13%);
 	--sidebar-item-hover: hsl(214, 35%, 18%);
