--- a/src/styles/themes/_light.scss
+++ b/src/styles/themes/_light.scss
@@ -40,6 +40,14 @@
 		var(--bewebdev-purple-saturated)
 	);
 
+	// popular categories landing
+	--theme-popular-categories-card-bg: rgba(0, 0, 0, 0.106);
+	--theme-popular-categories-card-text: var(--theme-bg);
+	--theme-popular-categories-button-bg: var(--theme-bg);
+	--theme-popular-categories-button-bg-hover: var(--bewebdev-pink-saturated);
+	--theme-popular-categories-button-border: rgba(255, 255, 255, 0.2);
+	--theme-popular-categories-card-border-hover: var(--theme-bg);
+
 	--sidebar-bg: hsl(214, 35%, 13%);
 	--sidebar-item-hover: hsl(0, 0%, 80%);
 	--sidebar-item-active: hsl(0, 0%, 100%);
