Update heading text

--- a/src/components/LandingPage/Categories/Categories.astro
+++ b/src/components/LandingPage/Categories/Categories.astro
@@ -48,7 +48,7 @@ const categoriesData = [
 </style>
 
 <section>
-  <h2>View our <GlowText>most popular</GlowText> categories</h2>
+  <h2>Check out our <GlowText>most popular</GlowText> categories</h2>
   <ul>
     {
       categoriesData.map((cat) => (
