Change size of categories images to be unified

--- a/src/components/LandingPage/Categories/Category.astro
+++ b/src/components/LandingPage/Categories/Category.astro
@@ -37,7 +37,8 @@ const { img, ...props }: Props = Astro.props
 <style lang='scss'>
 	img {
 		border-radius: 4px;
-		max-width: 100px;
+		width: 100px;
+		height: 100px;
 		aspect-ratio: 1/1;
 		object-fit: contain;
 	}
