--- a/src/components/Header/AstroLogo.astro
+++ b/src/components/Header/AstroLogo.astro
@@ -1,12 +1,16 @@
-<style>
-	img {
-		border-radius: 50%;
-		width: 50px;
-		aspect-ratio: 1/1;
+---
+const { default: logo } = await import(`./no-border-no-background-logo.svg?raw`)
+---
+
+<style is:global>
+	.header-logo {
+		height: 150px;
+		filter: invert(1);
 	}
 </style>
 
-<img
-	alt='bewebdev logo - computer backlit with pink color'
-	src='/images/nukp-logo.webp'
-/>
+<Fragment set:html={logo} />
+
+<script>
+	document.querySelector<SVGElement>('svg')?.classList.add('header-logo')
+</script>
