Base landing page with tailwind

--- a/src/components/HeadCommon.astro
+++ b/src/components/HeadCommon.astro
@@ -1,8 +1,9 @@
 ---
 import '../styles/index.css'
 import '../styles/theme.scss'
+import '../styles/themes/tailwind.css'
 
-const experimentalOptions = { fetchpriority: 'high' }
+const experimentalOptions = { importance: 'high' }
 ---
 
 <!-- Global Metadata -->
