Add theme switch compatible with tailwind

--- a/src/components/Header/Header.astro
+++ b/src/components/Header/Header.astro
@@ -23,7 +23,7 @@ const algoliaIsSetUp = indexName && appId && apiKey
 
 <header>
 	<SkipToContent />
-	<nav class='nav-wrapper' title='Top Navigation'>
+	<nav class='w-full fixed flex items-center justify-end gap-1 px-6' title='Top Navigation'>
 		{
 			!currentPageIsRoot && (
 				<div class='menu-toggle'>
