--- a/src/pages/new.astro
+++ b/src/pages/new.astro
@@ -6,6 +6,7 @@ import LandingSEO from '../components/LandingPage/LandingSEO.astro'
 import type { Frontmatter } from '../config'
 import * as CONFIG from '../config'
 import DonationModal from '../components/DonationModal/DonationModal.tsx'
+import Header from '../components/Header/Header.astro'
 
 export interface Props {
 	frontmatter: Frontmatter
@@ -27,6 +28,7 @@ const frontmatter: Frontmatter = {
 			{frontmatter.title ? `${frontmatter.title}` : CONFIG.SITE.title}
 		</title>
 	</head>
+	<Header />
 	<DonationModal client:only='react' />
 	<LandingPage />
 </html>
