--- a/src/components/Redesign/LandingElements/DocsButton.astro
+++ b/src/components/Redesign/LandingElements/DocsButton.astro
@@ -1,4 +1,13 @@
-	<div class='relative w-fit h-fit group'>
-				<div class='bg-gradient-to-r from-grad-start to-grad-end absolute left-0 top-0 w-full h-full group-hover:opacity-50 transition-opacity opacity-0 scale-125 pointer-events-none blur-md rounded-full duration-700'/>
-				<a class='transition ease-out group relative block bg-gradient-to-r from-grad-start to-grad-end py-3 px-8 rounded-md text-white font-bold hover:scale-110' href='/introduction'><span class='ease-out group-hover:scale-90 block transition'>Start learning</span></a>
-			</div>
+<div class='relative w-fit h-fit group'>
+	<div
+		class='bg-gradient-to-r from-grad-start to-grad-end absolute left-0 top-0 w-full h-full group-hover:opacity-50 transition-opacity opacity-0 scale-125 pointer-events-none blur-md rounded-full duration-700'
+	>
+	</div>
+	<a
+		class='transition ease-out group relative block bg-gradient-to-r from-grad-start to-grad-end py-3 px-8 rounded-md text-white font-bold hover:scale-110'
+		href='/introduction'
+		><span class='ease-out group-hover:scale-90 block transition'
+			>Start learning</span
+		></a
+	>
+</div>
