--- a/src/components/LandingPage/VideoEmbed/VideoEmbed.astro
+++ b/src/components/LandingPage/VideoEmbed/VideoEmbed.astro
@@ -3,10 +3,16 @@ import GlowText from '../../common/GlowText.astro'
 import DocsBtn from '../DocsBtn.astro'
 const YOUTUBE_CHANNEL_ID = 'UUww1wSWy6LvZjyEEHr7ypLA'
 
-const LATEST_VIDEO_COUNT = 2
+const LATEST_VIDEO_COUNT = 3
 
 const CHANNEL_SUBSCRIBE_LINK =
 	'https://www.youtube.com/@bewebdev?sub_confirmation=1'
+
+const getLatestVideoLink = (index: number) => {
+	return `https://www.youtube.com/embed?listType=playlist&list=${YOUTUBE_CHANNEL_ID}&index=${
+		index + 1
+	}`
+}
 ---
 
 <style lang='scss'>
@@ -46,43 +52,54 @@ const CHANNEL_SUBSCRIBE_LINK =
 		flex: 1 1 300px;
 		width: 100%;
 		height: 100%;
-		border-radius: 8px;
+		border-radius: 4px;
 		margin: 1rem auto;
 		aspect-ratio: 16/9;
 		border: none;
+		filter: grayscale(0.8);
 
-		box-shadow: 1px 2px 2px hsl(220deg 0% 0% / 0.2),
-			2px 4px 4px hsl(220deg 0% 0% / 0.2), 4px 8px 8px hsl(220deg 0% 0% / 0.2),
-			8px 16px 16px hsl(220deg 0% 0% / 0.2),
-			16px 32px 32px hsl(220deg 0% 0% / 0.2);
+		&:hover {
+			filter: none;
+		}
 	}
 </style>
 
-<section id='youtube-cta'>
-	<h2>We record <GlowText>code reviews</GlowText></h2>
-	<p class='description'>
-		We believe that code review can be the best way to learn best practices and
-		new ways to write code for both parties - code reviewer and code writer
-	</p>
-	<DocsBtn
-		title='Bewebdev on youtube'
-		href={CHANNEL_SUBSCRIBE_LINK}
-		isExternal
-		classes='repo'
-	>
-		Visit our channel
-	</DocsBtn>
-	<div class='videos-wrapper'>
-		{
-			Array.from({ length: LATEST_VIDEO_COUNT }).map((_, index) => {
-				const embedSource = `https://www.youtube.com/embed?listType=playlist&list=${YOUTUBE_CHANNEL_ID}&index=${
-					index + 1
-				}`
-				return <iframe class='video' src={embedSource} />
-			})
-		}
+<div class='flex items-center gap-8'>
+	<div class='flex-grow'>
+		<iframe class='video' src={getLatestVideoLink(0)}></iframe>
 	</div>
-</section>
+	<div>
+		<h2 class='text-3xl font-bold mb-4'>
+			We record <span class='gradient-text'>code reviews</span>
+		</h2>
+		<p class='description'>
+			We believe that code review can be the best way to learn best practices
+			and new ways to write code for both parties - code reviewer and code
+			writer
+		</p>
+		<div class='relative w-fit h-fit group'>
+			<div
+				class='bg-gradient-to-r from-grad-start to-grad-end absolute left-0 top-0 w-full h-full group-hover:opacity-50 transition-opacity opacity-0 scale-125 pointer-events-none blur-md rounded-full duration-700 saturate-200 brightness-125'
+			>
+			</div>
+			<a
+				class='transition ease-out group relative block bg-gradient-to-r from-grad-start to-grad-end py-3 px-8 rounded-md text-white font-bold hover:scale-110'
+				href={CHANNEL_SUBSCRIBE_LINK}
+				><span class='ease-out group-hover:scale-90 block transition'
+					>Visit our channel</span
+				></a
+			>
+		</div>
+	</div>
+</div>
+<div class='videos-wrapper'>
+	{
+		Array.from({ length: LATEST_VIDEO_COUNT }).map((_, index) => {
+			const embedSource = getLatestVideoLink(index + 1)
+			return <iframe class='video' src={embedSource} />
+		})
+	}
+</div>
 
 <script>
 	import { getUserIsFromPoland } from './helpers'
