--- a/src/components/Redesign/LandingPage.astro
+++ b/src/components/Redesign/LandingPage.astro
@@ -5,6 +5,7 @@ import LandingSection from './LandingSection.astro'
 import DocsButton from './LandingElements/DocsButton.astro'
 
 import FAQ from './LandingSections/FAQ.astro'
+import VideoEmbed from '../LandingPage/VideoEmbed/VideoEmbed.astro'
 const comparisonCardData: ComparisonCardProps[] = [
 	{
 		icon: '/icons/hourglass.svg',
@@ -25,27 +26,32 @@ const comparisonCardData: ComparisonCardProps[] = [
 ---
 
 <body class='bg-theme-base overflow-x-clip'>
-	<LandingSection className='pt-14 xl:pt-8 mb-16 flex gap-28 relative items-center'>
-					   <div class='-z-10 bg-theme-accent-primary w-1/2 h-full rounded-full absolute select-none pointer-events-none left-0 top-1/2 -translate-x-1/2 -translate-y-1/2 opacity-10 blur-[200px]'/>
-    <div class='-z-10 bg-theme-accent-secondary w-1/2 h-full rounded-full absolute select-none pointer-events-none left-1/2 top-0 -translate-x-1/2 -translate-y-1/2 opacity-50 blur-[200px]'/>
+	<LandingSection
+		className='pt-14 xl:pt-8 mb-16 flex gap-28 relative items-center'
+	>
+		<div
+			class='-z-10 bg-theme-accent-primary w-1/2 h-full rounded-full absolute select-none pointer-events-none left-0 top-1/2 -translate-x-1/2 -translate-y-1/2 opacity-10 blur-[200px]'
+		>
+		</div>
+		<div
+			class='-z-10 bg-theme-accent-secondary w-1/2 h-full rounded-full absolute select-none pointer-events-none left-1/2 top-0 -translate-x-1/2 -translate-y-1/2 opacity-50 blur-[200px]'
+		>
+		</div>
 		<div class='grow-1 w-full'>
 			<h2 class='text-theme-base text-4xl font-bold mb-8'>
 				The <span class='gradient-text'>best way</span> to learn web development
 			</h2>
-			<p class='mb-8'>Learning resources, carefully selected, verified, up to date</p>
-			<DocsButton/>
+			<p class='mb-8'>
+				Learning resources, carefully selected, verified, up to date
+			</p>
+			<DocsButton />
 		</div>
-    <div class='grow-1 flex items-center justify-center w-full'>
-				<img
-					class='max-h-[500px]'
-					src='/images/promo/wavy-edu.svg'
-					alt=''
-				/>
-			</div> 
-
+		<div class='grow-1 flex items-center justify-center w-full'>
+			<img class='max-h-[500px]' src='/images/promo/wavy-edu.svg' alt='' />
+		</div>
 	</LandingSection>
 
-	<div class="w-full mb-28 bg-gradient-to-r from-grad-start/10 to-grad-end/10">
+	<div class='w-full mb-28 bg-gradient-to-r from-grad-start/10 to-grad-end/10'>
 		<LandingSection className='flex py-16 gap-24 items-center justify-center'>
 			<div class='grow-1 w-full flex items-center justify-center'>
 				<img
@@ -60,7 +66,10 @@ const comparisonCardData: ComparisonCardProps[] = [
 					<span class='gradient-text'>bewebdev.tech</span> all about?
 				</h2>
 				<p class='mb-4'>
-					Introducing Bewebdev, your ultimate destination for learning web development. Why settle for scattered information when we've done the hard work for you? Discover the best resources, carefully chosen and verified, all in one convenient place.
+					Introducing Bewebdev, your ultimate destination for learning web
+					development. Why settle for scattered information when we've done the
+					hard work for you? Discover the best resources, carefully chosen and
+					verified, all in one convenient place.
 				</p>
 				<p>
 					Lorem ipsum dolor sit amet consectetur adipisicing elit. Et deserunt
@@ -71,14 +80,24 @@ const comparisonCardData: ComparisonCardProps[] = [
 			</div>
 		</LandingSection>
 	</div>
-
-	<LandingSection className='pb-28 border-b-2 border-basetext/10 mb-20 relative'>
+	<LandingSection className='mb-52'>
+		<VideoEmbed />
+	</LandingSection>
+	<LandingSection
+		className='pb-28 border-b-2 border-basetext/10 mb-20 relative'
+	>
 		<h2 class='text-3xl font-medium mb-5'>Advantages of using our platform</h2>
 		<ul class='flex gap-14'>
 			{comparisonCardData.map((card) => <ComparisonCard {...card} />)}
 		</ul>
-    <div class='bg-theme-accent-secondary w-96 h-64 rounded-full absolute left-1/2 bottom-0 blur-3xl opacity-10 select-none pointer-events-none -translate-x-1/2'/>
-    <div class='bg-theme-accent-primary w-64 h-64 rounded-full absolute left-0 top-1/2 blur-3xl opacity-5 select-none pointer-events-none -translate-x-1/2 -translate-y-1/2'/>
+		<div
+			class='bg-theme-accent-secondary w-96 h-64 rounded-full absolute left-1/2 bottom-0 blur-3xl opacity-10 select-none pointer-events-none -translate-x-1/2'
+		>
+		</div>
+		<div
+			class='bg-theme-accent-primary w-64 h-64 rounded-full absolute left-0 top-1/2 blur-3xl opacity-5 select-none pointer-events-none -translate-x-1/2 -translate-y-1/2'
+		>
+		</div>
 	</LandingSection>
-	<FAQ/>
+	<FAQ />
 </body>
