Rwd for comparison card component

--- a/src/components/Redesign/ComparisonCard.astro
+++ b/src/components/Redesign/ComparisonCard.astro
@@ -7,12 +7,16 @@ export type ComparisonCardProps = {
 const { title, text, icon } = Astro.props as ComparisonCardProps
 ---
 
-<li class='p-[2px] bg-gradient-to-r from-grad-start/30 to-grad-end/30 rounded-lg'>
-	<div class='bg-theme-base p-10 rounded-md flex flex-col gap-6 justify-start items-start'>
-    <div>
-      <img src={icon} alt='' class='w-16 h-16' />
-    </div>
-      <h3 class='font-[600] text-2xl'>{title}</h3>
-      <p>{text}</p>
-  </div>
+<li
+	class='p-[2px] bg-gradient-to-r from-grad-start/30 to-grad-end/30 rounded-lg flex-auto basis-72'
+>
+	<div
+		class='bg-theme-base p-10 rounded-md flex flex-col gap-6 justify-start items-start h-full w-full'
+	>
+		<div>
+			<img src={icon} alt='' class='w-16 h-16' />
+		</div>
+		<h3 class='font-[600] text-2xl'>{title}</h3>
+		<p class='text-theme-muted'>{text}</p>
+	</div>
 </li>
