--- a/src/components/Redesign/LandingPage.astro
+++ b/src/components/Redesign/LandingPage.astro
@@ -6,23 +6,7 @@ import DocsButton from './LandingElements/DocsButton.astro'
 
 import FAQ from './LandingSections/FAQ.astro'
 import VideoEmbed from '../LandingPage/VideoEmbed/VideoEmbed.astro'
-const comparisonCardData: ComparisonCardProps[] = [
-	{
-		icon: '/icons/hourglass.svg',
-		title: 'Save time',
-		text: 'We have done the hard work for you. No need to search for resources.',
-	},
-	{
-		icon: '/icons/savings.svg',
-		title: 'Free',
-		text: 'Our platform is free to use. No hidden fees or subscriptions.',
-	},
-	{
-		icon: '/icons/school_hat.svg',
-		title: 'Proven resources',
-		text: 'We only list resources that have been helpful to other developers. No filler content.',
-	},
-]
+import Advantages from './LandingSections/Advantages.astro'
 ---
 
 <body class='bg-theme-base overflow-x-clip'>
@@ -83,21 +67,6 @@ const comparisonCardData: ComparisonCardProps[] = [
 	<LandingSection className='mb-52'>
 		<VideoEmbed />
 	</LandingSection>
-	<LandingSection
-		className='pb-28 border-b-2 border-basetext/10 mb-20 relative'
-	>
-		<h2 class='text-3xl font-medium mb-5'>Advantages of using our platform</h2>
-		<ul class='flex gap-4 lg:gap-8 xl:gap-14 flex-wrap'>
-			{comparisonCardData.map((card) => <ComparisonCard {...card} />)}
-		</ul>
-		<div
-			class='bg-theme-accent-secondary w-96 h-64 rounded-full absolute left-1/2 bottom-0 blur-3xl opacity-10 select-none pointer-events-none -translate-x-1/2'
-		>
-		</div>
-		<div
-			class='bg-theme-accent-primary w-64 h-64 rounded-full absolute left-0 top-1/2 blur-3xl opacity-5 select-none pointer-events-none -translate-x-1/2 -translate-y-1/2'
-		>
-		</div>
-	</LandingSection>
+	<Advantages />
 	<FAQ />
 </body>
