Add motion reduce support for FAQ

--- a/src/components/Redesign/LandingSections/FAQ.astro
+++ b/src/components/Redesign/LandingSections/FAQ.astro
@@ -39,7 +39,7 @@ const questions = [
 	<h2 class='text-3xl font-medium mb-5'>Frequently Asked Questions</h2>
 	<AccordionFAQ client:visible items={questions} />
 	<div
-		class='bg-theme-accent-primary w-1/2 h-full rounded-full absolute select-none pointer-events-none left-0 top-full -translate-x-1/2 -translate-y-1/2 blur-[200px] opacity-10'
+		class='bg-theme-accent-primary/10 w-1/2 h-full rounded-full absolute select-none pointer-events-none left-0 top-full -translate-x-1/2 -translate-y-1/2 blur-[200px]'
 	>
 	</div>
 	<div
@@ -47,4 +47,3 @@ const questions = [
 	>
 	</div>
 </LandingSection>
-
