--- a/src/components/Redesign/LandingSections/FAQ.astro
+++ b/src/components/Redesign/LandingSections/FAQ.astro
@@ -36,7 +36,7 @@ const questions = [
 ---
 
 <LandingSection className='mb-28 relative'>
-	<h2 class='text-3xl font-medium mb-5'>Frequently Asked Questions</h2>
+	<h2 id="faq" class='text-3xl font-medium mb-5 scroll-mt-44'>Frequently Asked Questions</h2>
 	<AccordionFAQ client:visible items={questions} />
 	<div
 		class='bg-theme-accent-primary/10 w-1/2 h-full rounded-full absolute select-none pointer-events-none left-0 top-full -translate-x-1/2 -translate-y-1/2 blur-[200px]'
