Add github to socials

--- a/src/components/Redesign/LandingSections/Footer/Socials.astro
+++ b/src/components/Redesign/LandingSections/Footer/Socials.astro
@@ -1,17 +1,25 @@
 ---
-import { DiscordLogoIcon, PlayIcon } from '@radix-ui/react-icons';
-import SocialLink from './SocialLink.astro';
-
+import {
+	DiscordLogoIcon,
+	GitHubLogoIcon,
+	PlayIcon,
+} from '@radix-ui/react-icons'
+import SocialLink from './SocialLink.astro'
 ---
 
 <div>
-  <h2 class="mb-5">Social Handles</h2>
-  <ul class="flex gap-4 ">
-    <SocialLink href='https://github.com/goodideagiver'>
-      <DiscordLogoIcon />
-    </SocialLink>
-    <SocialLink href='https://www.youtube.com/@bewebdev?sub_confirmation=1'>
-      <PlayIcon />
-    </SocialLink>
-  </ul>
+	<h2 class='mb-5'>Social Handles</h2>
+	<ul class='flex gap-4'>
+		<SocialLink href='https://github.com/goodideagiver'>
+			<DiscordLogoIcon />
+		</SocialLink>
+		<SocialLink href='https://www.youtube.com/@bewebdev?sub_confirmation=1'>
+			<PlayIcon />
+		</SocialLink>
+		<SocialLink
+			href='https://github.com/NowYouKnowProgramming/webdev-learning-materials'
+		>
+			<GitHubLogoIcon />
+		</SocialLink>
+	</ul>
 </div>
