Add linkedin to socials

--- a/src/components/Redesign/LandingSections/Footer/Socials.astro
+++ b/src/components/Redesign/LandingSections/Footer/Socials.astro
@@ -2,6 +2,7 @@
 import {
 	DiscordLogoIcon,
 	GitHubLogoIcon,
+	LinkedInLogoIcon,
 	PlayIcon,
 } from '@radix-ui/react-icons'
 import SocialLink from './SocialLink.astro'
@@ -20,6 +21,9 @@ import SocialLink from './SocialLink.astro'
 			href='https://github.com/NowYouKnowProgramming/webdev-learning-materials'
 		>
 			<GitHubLogoIcon />
+		</SocialLink>
+		<SocialLink href='https://pl.linkedin.com/company/bewebdev'>
+			<LinkedInLogoIcon />
 		</SocialLink>
 	</ul>
 </div>
